Home gallery layout improved

--- a/src/app/home/homegallery/homegallery.component.html
+++ b/src/app/home/homegallery/homegallery.component.html
@@ -1,193 +1,102 @@
-<!-- Main container -->
-<div>
-    <!-- Gallery heading -->
-    <div class="main_page_gallery_heading">Khadi Products and Outlets</div>
-    <!-- Gallery grid container -->
-    <div class="maingallery">
-        <!-- Gallery items - Each represents a product/outlet with image and overlay -->
-        <div class="pictures" id="p4">
-            <img src="../../../assets/mainGallery/img4.jpg" alt="Handwoven Silk Saris">
-            <a [routerLink]="['/products']" class="overlay">
-                Handwoven Silk Saris
-                <div class="gallery_image_link">Click to see more<span
-                        class="material-symbols-outlined">arrow_right_alt</span></div>
-            </a>
-        </div>
-        <div class="pictures" id="p5">
-            <img src="../../../assets/mainGallery/img5.jpg" alt="Organic Incense">
-            <a [routerLink]="['/products']" class="overlay">
-                Organic Incense
-                <div class="gallery_image_link">Click to see more<span
-                        class="material-symbols-outlined">arrow_right_alt</span></div>
-            </a>
-        </div>
-        <div class="pictures" id="p7">
-            <img src="../../../assets/mainGallery/img7.jpg" alt="">
-            <a [routerLink]="['/outlets']" class="overlay">
-                Namchi Outlet
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p8">
-            <img src="../../../assets/mainGallery/img8.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Khadi Quilts
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p9">
-            <img src="../../../assets/mainGallery/img9.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Simul Pillows
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p10">
-            <img src="../../../assets/mainGallery/img10.jpg" alt="">
-            <a [routerLink]="['/outlets']" class="overlay">
-                Gyalshing Outlet
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p11">
-            <img src="../../../assets/mainGallery/img11.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Local Organic Turmeric
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p12">
-            <img src="../../../assets/mainGallery/img12.jpg" alt="">
-            <a [routerLink]="['/production']" class="overlay">
-                Tarku Weaving Center
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p13">
-            <img src="../../../assets/mainGallery/img13.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Temi Tea
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p14">
-            <img src="../../../assets/mainGallery/img14.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Khadi Hand Made Shawls
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p15">
-            <img src="../../../assets/mainGallery/img15.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Organic Honey
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p16">
-            <img src="../../../assets/mainGallery/img16.jpg" alt="">
-            <a [routerLink]="['/production']" class="overlay">
-                Turuk Weaving Center
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p17">
-            <img src="../../../assets/mainGallery/img17.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Hand made cotton saris
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p18">
-            <img src="../../../assets/mainGallery/img18.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Bee Keeping Equipment
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p19">
-            <img src="../../../assets/mainGallery/img19.jpg" alt="">
-            <a [routerLink]="['/outlets']" class="overlay">
-                Deorali Outlet
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p20">
-            <img src="../../../assets/mainGallery/img20.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Khadi Hand Made Shawls
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p1">
-            <img src="../../../assets/mainGallery/img1.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Khadi Toileteries
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p2">
-            <img src="../../../assets/mainGallery/img2.jpg" alt="">
-            <a [routerLink]="['/products']" class="overlay">
-                Local Organic Honey
-                <div class="gallery_image_link">
-                    Click to see more
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </div>
-            </a>
-        </div>
-        <div class="pictures" id="p3">
-            <img src="../../../assets/mainGallery/img3.jpg" alt="Khadi Duree and Rugs">
-            <a [routerLink]="['/products']" class="overlay">
-                Khadi Duree and Rugs
-                <div class="gallery_image_link">Click to see more<span
-                        class="material-symbols-outlined">arrow_right_alt</span></div>
-            </a>
-        </div>
+<!-- Modern Gallery Section -->
+<section class="gallery-section">
+  <!-- Section Header -->
+  <div class="section-header">
+    <h2 class="section-title">Our Heritage Collection</h2>
+    <p class="section-subtitle">
+      Discover authentic Khadi products, traditional crafts, and visit our outlets across Sikkim
+    </p>
+    
+    <!-- Category Stats -->
+    <div class="category-stats" *ngIf="galleryStats$ | async as stats">
+      <div class="stat-item">
+        <span class="stat-number">{{ stats.products }}</span>
+        <span class="stat-label">Products</span>
+      </div>
+      <div class="stat-item">
+        <span class="stat-number">{{ stats.outlets }}</span>
+        <span class="stat-label">Outlets</span>
+      </div>
+      <div class="stat-item">
+        <span class="stat-number">{{ stats.production }}</span>
+        <span class="stat-label">Centers</span>
+      </div>
     </div>
-</div>
+  </div>
+
+  <!-- Gallery Grid -->
+  <div class="gallery-container">
+    <div class="gallery-grid" *ngIf="galleryItems$ | async as items; else loadingTemplate">
+      <article 
+        class="gallery-item" 
+        *ngFor="let item of visibleItems; trackBy: trackByItemId"
+        [class]="'size-' + item.size"
+        [class.loaded]="item.loaded"
+        appLazyLoad
+        (appear)="onItemAppear(item)"
+      >
+        <!-- Image Container -->
+        <div class="item-image-container">
+          <img 
+            [src]="item.imageUrl" 
+            [alt]="item.alt"
+            class="item-image"
+            [class.loaded]="item.loaded"
+            (load)="onImageLoad(item)"
+            (error)="onImageError(item)"
+            loading="lazy"
+          >
+          
+          <!-- Loading Placeholder -->
+          <div class="image-placeholder" *ngIf="!item.loaded">
+            <div class="placeholder-shimmer"></div>
+          </div>
+          
+          <!-- Category Badge -->
+          <div class="category-badge" [class]="'badge-' + item.category">
+            {{ getCategoryLabel(item.category) }}
+          </div>
+          
+          <!-- Overlay -->
+          <a 
+            [routerLink]="item.route" 
+            class="item-overlay"
+            [attr.aria-label]="'View ' + item.title"
+          >
+            <div class="overlay-content">
+              <h3 class="item-title">{{ item.title }}</h3>
+              <p class="item-description" *ngIf="item.description">{{ item.description }}</p>
+              
+              <div class="item-action">
+                <span class="action-text">Explore More</span>
+                <span class="action-icon" aria-hidden="true">→</span>
+              </div>
+            </div>
+          </a>
+        </div>
+      </article>
+    </div>
+    
+    <!-- Load More Trigger -->
+    <div 
+      class="load-more-trigger" 
+      appLazyLoad 
+      (appear)="loadMoreItems()"
+      *ngIf="hasMoreItems"
+    >
+      <div class="loading-indicator">
+        <div class="spinner"></div>
+        <span>Loading more items...</span>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Loading Template -->
+  <ng-template #loadingTemplate>
+    <div class="gallery-grid loading">
+      <div class="gallery-item skeleton" *ngFor="let item of [1,2,3,4,5,6]">
+        <div class="item-image-container skeleton-image"></div>
+      </div>
+    </div>
+  </ng-template>
+</section>
