--- a/src/app/pages/outlets/outlets.component.html
+++ b/src/app/pages/outlets/outlets.component.html
@@ -1,42 +1,90 @@
-<div class="outlook_intro">
-    <div class="outlook_intro_container">
-        <p>
-            Sikkim Khadi and Village Industries Board has 6 outlets all over the state, through which Khadi
-            and village industries products are sold.While some of the products are manufactured in-house,
-            other Khadi products are also sourced from other states.
-            Products manufactured by local entrepreneurs are also promoted and sold in these outlets.
-        </p>
+<!-- Modern Outlets Section -->
+<section class="outlets-section">
+  <!-- Section Header -->
+  <div class="section-header">
+    <h1 class="section-title">Our Khadi Outlets</h1>
+    <p class="section-subtitle">
+      Sikkim Khadi and Village Industries Board has 6 outlets all over the state, through which Khadi and village industries products are sold. While some of the products are manufactured in-house, other Khadi products are also sourced from other states. Products manufactured by local entrepreneurs are also promoted and sold in these outlets.
+    </p>
+    
+    <!-- Outlet Stats -->
+    <div class="outlet-stats" *ngIf="outletStats$ | async as stats">
+      <div class="stat-item">
+        <span class="stat-number">{{ stats.total }}</span>
+        <span class="stat-label">Outlets</span>
+      </div>
+      <div class="stat-item">
+        <span class="stat-number">{{ stats.locations.length }}</span>
+        <span class="stat-label">Districts</span>
+      </div>
     </div>
-</div>
-<div class="outlets">
-    <div class="outlets__item">
-        <img src="../../../assets/outlets/images/namchi.jpg" alt="">
-        <p class="outlets__text">Namchi Outlet</p>
-        <a [routerLink]="['/outlets', 'namchi']">Click to see more <span class="material-symbols-outlined">arrow_right_alt</span></a>
+  </div>
+
+  <!-- Outlets Grid -->
+  <div class="outlets-container">
+    <div class="outlets-grid" *ngIf="outlets$ | async as outlets; else loadingTemplate">
+      <article 
+        class="outlet-card" 
+        *ngFor="let outlet of visibleOutlets; trackBy: trackByOutletId; let i = index"
+        [class.loaded]="outlet.loaded"
+        appLazyLoad
+        (appear)="onOutletAppear(outlet)"
+        [style.animation-delay.ms]="i * 150"
+      >
+        <!-- Image Container -->
+        <div class="outlet-image-container">
+          <img 
+            [src]="outlet.coverImage.url" 
+            [alt]="outlet.coverImage.alt"
+            class="outlet-image"
+            [class.loaded]="outlet.imageLoaded"
+            (load)="onImageLoad(outlet)"
+            (error)="onImageError(outlet)"
+            loading="lazy"
+          >
+          
+          <!-- Loading Placeholder -->
+          <div class="image-placeholder" *ngIf="!outlet.imageLoaded">
+            <div class="placeholder-shimmer"></div>
+          </div>
+          
+          <!-- Location Badge -->
+          <div class="location-badge">
+            <span class="material-symbols-outlined">location_on</span>
+            {{ outlet.location }}
+          </div>
+        </div>
+        
+        <!-- Content -->
+        <div class="outlet-content">
+          <h3 class="outlet-name">{{ outlet.name }}</h3>
+          <p class="outlet-description">{{ outlet.description }}</p>
+          
+          <!-- Address -->
+          <div class="outlet-address">
+            <span class="material-symbols-outlined">home</span>
+            <div class="address-text">
+              <span>{{ outlet.address.line1 }}</span>
+              <span>{{ outlet.address.line2 }}</span>
+              <span *ngIf="outlet.address.line3">{{ outlet.address.line3 }}</span>
+            </div>
+          </div>
+          
+          <!-- CTA Button -->
+          <a [routerLink]="outlet.route" class="outlet-cta">
+            <span>Explore Outlet</span>
+            <span class="material-symbols-outlined">arrow_forward</span>
+          </a>
+        </div>
+      </article>
     </div>
-    <div class="outlets__item">
-        <img src="../../../assets/outlets/images/gyalshing.jpg" alt="">
-        <p class="outlets__text">Gyalshing Outlet</p>
-        <a [routerLink]="['/outlets', 'gyalshing']">Click to see more <span class="material-symbols-outlined">arrow_right_alt</span></a>
-    </div>
-    <div class="outlets__item">
-        <img src="../../../assets/outlets/images/singtam.jpg" alt="">
-        <p class="outlets__text">Singtam Outlet</p>
-        <a [routerLink]="['/outlets', 'singtam']">Click to see more <span class="material-symbols-outlined">arrow_right_alt</span></a>
-    </div>
-    <div class="outlets__item">
-        <img src="../../../assets/outlets/images/deorali.jpg" alt="">
-        <p class="outlets__text">Deorali Outlet</p>
-        <a [routerLink]="['/outlets', 'deorali']">Click to see more <span class="material-symbols-outlined">arrow_right_alt</span></a>
-    </div>
-    <div class="outlets__item">
-        <img src="../../../assets/outlets/images/jorethang.jpg" alt="">
-        <p class="outlets__text">Jorethang Outlet</p>
-        <a [routerLink]="['/outlets', 'jorethang']">Click to see more <span class="material-symbols-outlined">arrow_right_alt</span></a>
-    </div>
-    <div class="outlets__item">
-        <img src="../../../assets/outlets/images/supermarket.jpg" alt="">
-        <p class="outlets__text">Supermarket Outlet</p>
-        <a [routerLink]="['/outlets', 'supermarket']">Click to see more <span class="material-symbols-outlined">arrow_right_alt</span></a>
-    </div>
-</div>
+    
+    <!-- Loading Template -->
+    <ng-template #loadingTemplate>
+      <div class="loading-container">
+        <div class="loading-spinner"></div>
+        <p class="loading-text">Loading outlets...</p>
+      </div>
+    </ng-template>
+  </div>
+</section>
